update make file generalize

--- a/MakeFile/Make_File_Embedded/Makefile
+++ b/MakeFile/Make_File_Embedded/Makefile
@@ -1,35 +1,57 @@
 GCC_DIR := C:/GNU_Arm_Embedded_Toolchain/10_2021_10/
 CC=$(GCC_DIR)/bin/arm-none-eabi-gcc.exe
 LD_FILE := Linker/STM32F103C8TX_FLASH.ld
-INC_DIR := 	Driver/GPIO/inc \
-			Startup
 
 
-CHIP=cortex-m4
+MODULE := GPIO
+PATH_OUTPUT = ./Output
 
-CCFLAGS = -c -mcpu=$(CHIP) -mthumb -std=gnu11 -O0 -I$(INC_DIR)
-LDFLAGS = -nostdlib -T $(LD_FILE) -Wl,-Map=Output/GPIO.map
+# Include files
+INC_DIRS += 	Driver/$(MODULE)/inc \
+				User/inc
+INC_FILES = $(foreach var,$(INC_DIRS), $(wildcard $(var)/*))
 
-build: Output/GPIO.hex
+# Source files
+SRC_DIRS +=		Driver/$(MODULE)/src \
+				User/src \
+				Startup
+				
+SRC_FILES = $(foreach var,$(SRC_DIRS), $(wildcard $(var)/*.c))
 
-Output/main.o: User/src/main.c
-	$(CC) $(CCFLAGS) -o Output/main.o User/src/main.c
-Output/GPIO.o: Driver/GPIO/src/GPIO.c
-	$(CC) $(CCFLAGS) -o Output/GPIO.o Driver/GPIO/src/GPIO.c
-Output/Statup.o: Startup/stm32_startup.c
-	$(CC) $(CCFLAGS) -o Output/Statup.o Startup/stm32_startup.c
+# CC Opt for INC_DIRS
+INC_DIRS_OPT =$(foreach var, $(INC_DIRS), -I$(var))
 
-Output/GPIO.elf: Output/main.o Output/GPIO.o Output/Statup.o
-	$(CC) $(LDFLAGS) -o Output/GPIO.elf Output/main.o Output/GPIO.o Output/Statup.o
+# Object Files
+OBJ_FILES := $(notdir $(SRC_FILES))
+OBJ_FILES := $(subst .c,.o,$(OBJ_FILES))
+PATH_OJBS := $(foreach var,$(OBJ_FILES), $(PATH_OUTPUT)/$(var))
 
-Output/GPIO.hex: Output/GPIO.elf
-	$(GCC_DIR)/arm-none-eabi/bin/objcopy.exe -O ihex "Output/GPIO.elf" "Output/GPIO.hex"
+CHIP=cortex-m3
+
+CCFLAGS = -c -mcpu=$(CHIP) -mthumb -std=gnu11 -O0 -g $(INC_DIRS_OPT)
+LDFLAGS = -nostdlib -T $(LD_FILE) -Wl,-Map=$(PATH_OUTPUT)/$(MODULE).map
+
+vpath %.c $(SRC_DIRS)
+
+all: $(PATH_OUTPUT)/$(MODULE).hex
+
+%.o:%.c
+	$(CC) $(CCFLAGS) -o $(PATH_OUTPUT)/$@ $^
+
+$(PATH_OUTPUT)/$(MODULE).elf: $(OBJ_FILES)
+	$(CC) $(LDFLAGS) -o $@ $(PATH_OJBS)
+
+$(PATH_OUTPUT)/$(MODULE).hex: $(PATH_OUTPUT)/$(MODULE).elf
+	$(GCC_DIR)/arm-none-eabi/bin/objcopy.exe -O ihex "$^" "$@"
 
 run:
 	./Tools/ST-LINK_Utility/ST-LINK_CLI.exe -ME
-	./Tools/ST-LINK_Utility/ST-LINK_CLI.exe -p "Output/GPIO.hex" 0x08000000
+	./Tools/ST-LINK_Utility/ST-LINK_CLI.exe -p "$(PATH_OUTPUT)/$(MODULE).hex" 0x08000000
 	./Tools/ST-LINK_Utility/ST-LINK_CLI.exe -rst
 
 clean:
-	@rm -rf Output/*
+	@rm -rf $(PATH_OUTPUT)/*
 	@echo "Clear all output file!"
+
+print-%:
+	@echo $($(subst print-,,$@))
